--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,13 @@
 <mat-toolbar color="primary"> 
     <mat-toolbar-row>
             <span class="title-center">
-        My single page application
+        Avon Lady (Single Page Application)
     </span>
       </mat-toolbar-row>
     
       <mat-toolbar-row>
 
-  <button mat-button [routerLink]="['/create']" color="Warn">Create</button>
+  <button mat-button [routerLink]="['/Insert product']" color="Warn">Insert product</button>
   <button mat-button [routerLink]="['/list']">List</button>
 </mat-toolbar-row>
  </mat-toolbar>
