--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -1,6 +1,6 @@
 
 
-<mat-toolbar color="primary">Posts List</mat-toolbar>
+<mat-toolbar color="primary">Catalog</mat-toolbar>
 <mat-accordion multi="true" *ngIf="posts.length > 0">
   <mat-expansion-panel [expanded]="true" *ngFor="let post of posts">
     <mat-expansion-panel-header>
