--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       <mat-toolbar-row>
 
   <button mat-button [routerLink]="['/Insert product']" color="Warn">Insert product</button>
-  <button mat-button [routerLink]="['/list']">List</button>
+  <button mat-button [routerLink]="['/Products']">Products</button>
 </mat-toolbar-row>
  </mat-toolbar>
  
