--- a/src/app/insert/insert.component.html
+++ b/src/app/insert/insert.component.html
@@ -77,6 +77,6 @@ table, th, td {
 <button
       mat-raised-button
       color="accent"
-      type="submit">Save Post</button>
+      type="submit">Save Product Details</button>
   </form>
 </mat-card>
