--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -2,21 +2,18 @@
 
 <mat-toolbar color="primary">Catalog</mat-toolbar>
 <mat-accordion multi="true" *ngIf="posts.length > 0">
-  <mat-expansion-panel [expanded]="true" *ngFor="let post of posts">
+  <mat-expansion-panel [expanded]="false" *ngFor="let post of posts">
     <mat-expansion-panel-header>
       {{ post.product_id }}
-    </mat-expansion-panel-header>
-    <mat-expansion-panel-header>
+
       {{ post.product_name }}
-    </mat-expansion-panel-header>
-    <mat-expansion-panel-header>
+   
       {{ post.product_category }}
-    </mat-expansion-panel-header>
-  <mat-expansion-panel-header>
+
     {{ post.product_price }}
   </mat-expansion-panel-header>
     <mat-action-row>
-      <button mat-button  color="primary">EDIT</button>
+
       <button mat-button (click)= "onDelete(post._id)" color="warn">DELETE</button>
     </mat-action-row>
   </mat-expansion-panel>
