--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 
   <button mat-button [routerLink]="['/Insert product']" color="Warn">Insert product</button>
   <button mat-button [routerLink]="['/Products']">Catalog</button>
-  <button mat-button [routerLink]="['/Customers']">Customers</button>
+  <button mat-button [routerLink]="['/about']">About us</button>
 </mat-toolbar-row>
  </mat-toolbar>
  
