contact buttom sheet final

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <mat-toolbar-row>
             <span class="title-center">
         Avon Lady (Single Page Application)
-    </span>
+    </span><pre>                                                                                      <button mat-raised-button (click)="openBottomSheet()">Contact us</button></pre>
       </mat-toolbar-row>
     
       <mat-toolbar-row>
@@ -17,10 +17,12 @@
   <button mat-button [routerLink]="['/Products']">Catalog</button>
   <button mat-button [routerLink]="['/Feedback']">Feedback</button>
   <button mat-button [routerLink]="['/about']">About us </button>
+
 </mat-toolbar-row>
  </mat-toolbar>
  
-
+ 
+ 
 <!--<button mat-button color="primary" [matMenuTriggerFor]="menu">Posts Menu</button>
 <mat-menu color="primary" #menu="matMenu">
   <button color="primary" mat-menu-item [routerLink]="['/create']">Create</button>
