--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -47,10 +47,9 @@
   <br>
 </div>
 
-<div class="a"><button
-      mat-raised-button
-      color="accent"
-      type="submit">Save feedback</button>
+<div class="a"><button mat-raised-button (click)="openBottomSheet()">Submit Survey</button>
 </div>
+
+
 
   
