--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       <mat-toolbar-row>
 
   <button mat-button [routerLink]="['/Insert product']" color="Warn">Insert product</button>
-  <button mat-button [routerLink]="['/Products']">Catalog</button>
+  <button mat-button [routerLink]="['/Catalog']">Catalog</button>
   <button mat-button [routerLink]="['/Feedback']">Feedback</button>
   <button mat-button [routerLink]="['/about']">About us </button>
 
